# template-use

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.githooks/: pre-commit
python_dev_template/: main.py
tests/: test_main.py
